--- a/LR/lr/public/index.html
+++ b/LR/lr/public/index.html
@@ -4,11 +4,11 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title>Welcome to Pylons!</title>
+        <title>The Learning Registry</title>
         <style type="text/css">
             body {
-                font-family: arial, helvetica, sans-serif;
-                background-color: #ffc900;
+                font-family: verdana, arial, helvetica, sans-serif;
+                background-color: #DCE6F2;
                 background-image: url(bg.png);
                 background-repeat: repeat-x;
                 width:100%;
@@ -17,11 +17,11 @@
                 max-height: 100%;
                 padding:0;
                 border:none;
-                line-height:1.4;
+                line-height:1.2;
             }
             #container {
-                color:white;
-                background-color:#111;
+                color:black;
+                background-color:white;
                 position: absolute;
                 left: 50%;
                 width: 500px;
@@ -30,12 +30,10 @@
                 height:100%;
             }
             #footer {
-                margin: 120px 0 0 0;
+                margin: 60px 0 0 0;
                 padding: 3px;
                 text-align:center;
-                font-size:small;
-                background-color:#222;
-                letter-spacing: 1px;
+                background-color:white;
             }
             h1 {
                 text-align:center;
@@ -46,91 +44,62 @@
                 padding:0;
                 letter-spacing: 5px;
             }
-            h2 {
-                font-size:xx-large;
-                font-weight:normal;
-                margin: 0 0 20px 0;
-                border:none;
-                padding:0;
-            }
             hr {
                 margin-bottom:30px;
-                border: 1px solid #222;
-                background-color: #222;
+                border: 1px solid #DADADA;
+                background-color: #DADADA;
                 padding: 2px;
             }
-            #logo {
-                background-image: url(signum8b_spk.png);
-                background-repeat: no-repeat;
-                height: 0;
-                overflow: hidden;
-                padding-top: 99px;
-                width: 239px;
-            }
-            #left {
-                float:left;
-                width:250px;
-                margin:0 50px 0 0;
-                border:none;
-                padding:0 0 0 10px;
-            }
-            #right {
-                margin:0 0 0 330px;
-                border:none;
-                padding:0;
-            }
             ul {
-                list-style:none;
-                margin:0;
+                list-style:disc;
+                margin:20px;
                 border:none;
                 padding:0;
             }
             a:visited {
-                color:white;
+                color:#08088A;
                 text-decoration:none;
             }
             a:link {
-                color:white;
+                color:blue;
                 text-decoration:none;
             }</style>
     </head>
     <body>
         <div id="container">
-            <h1>Welcome to <img src="pylons-logo.gif" alt="Logo displaying the word Pylons"
-                    style="vertical-align:-15px; width: 250px;"/>
+
+            <h1><a href="http://www.learningregistry.org/"><img src="LRlogo.png" alt="Learning Registery" style="width: 480px; border: none"/></a>
             </h1>
             <hr/>
-            <div id="left">
-                <h2>Let's begin!</h2>
-                <p>If you haven't used Pylons before, start with the <a href="http://pylonshq.com/docs/en/1.0/gettingstarted/"
-                        style="text-decoration:underline;">beginners' tutorial</a>.</p>
-            </div>
-            <div id="right">
-                <h2>Help</h2>
+                <p>Welcome to this Learning Registry (LR) node. If you have questions, please
+                   email the <a href="mailto:learningreg-dev@googlegroups.com">LR developer's email list</a>.
+                   We have provided some useful links below:</p>
+		<p>
+
                 <ul>
                     <li>
-                        <a href="http://pylonshq.com/docs/en/1.0/">Official documentation</a>
+
+                        <a href="http://www.learningregistry.org/">LearningRegistry.org Home Page</a>
                     </li>
                     <li>
-                        <a href="http://wiki.pylonshq.com/display/pylonsfaq/Home">FAQ</a>
+                        <!-- <a href="http://www.learningregistry.org/">FAQ</a> -->
+						LR Wiki (coming soon!)
                     </li>
                     <li>
-                        <a href="http://wiki.pylonshq.com/dashboard.action">Wiki</a>
+                        <a href="https://docs.google.com/document/d/191BTary350To_4JokBUFZLFRMOEfGYrl_EHE6QZxUr8/edit?hl=en">LR Technical Specification Document</a>
+
                     </li>
                     <li>
-                        <a href="http://wiki.pylonshq.com/display/pylonscommunity/Home#Home-JointheMailingLists">Mailing list</a>
+                        <a href="https://github.com/LearningRegistry">LR Github Code Repository</a>
                     </li>
                     <li>
-                        <a href="http://wiki.pylonshq.com/display/pylonscommunity/Home#Home-IRC">IRC</a>
-                    </li>
-                    <li>
-                        <a href="http://pylonshq.com/project/pylonshq/roadmap">Bug tracker</a>
+                        <a href="https://www.pivotaltracker.com/projects/244279">LR Pivotal Tracker Project Management Tool</a>
                     </li>
                 </ul>
-            </div>
+
             <div id="footer">
-                <a href="http://www.pylonshq.com" style="color: #ccc; text-decoration:none;"
-                    >www.pylonshq.com</a>
+                LR is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">
+                Apache License, Version 2.0</a>
             </div>
         </div>
     </body>
