Edited LR/lr/public/index.html via GitHub

--- a/LR/lr/public/index.html
+++ b/LR/lr/public/index.html
@@ -82,8 +82,7 @@
                         <a href="http://www.learningregistry.org/">LearningRegistry.org Home Page</a>
                     </li>
                     <li>
-                        <!-- <a href="http://www.learningregistry.org/">FAQ</a> -->
-						LR Wiki (coming soon!)
+                        <a href="http://www.github.com/LearningRegistry/LearningRegistry/wiki">LR Wiki</a> 
                     </li>
                     <li>
                         <a href="https://docs.google.com/document/d/191BTary350To_4JokBUFZLFRMOEfGYrl_EHE6QZxUr8/edit?hl=en">LR Technical Specification Document</a>
