prelim service api

--- a/data-services/index.html
+++ b/data-services/index.html
@@ -221,6 +221,14 @@
     </section>
 
 
+
+    <section class="slide" id="extract-service-api">
+        <h2>The Extract Service HTTP API</h2>
+        <p><strong>WIP</strong> Using a GET request:</p>
+        <div>
+            <code>GET /extract/&lt;data service name&gt;/&lt;view name&gt;/[&lt;parameter&gt;/&lt;value&gt;][?&lt;DS Query Params&gt;]</code>
+        </div>
+    </section>
  <!--    <section class="slide" id="themes">
         <h2></h2>
         <p>Customizes the colors, typography, and layout of slide&nbsp;content.</p>
