fix issue w/ exports

--- a/data-services/index.html
+++ b/data-services/index.html
@@ -797,6 +797,9 @@ function(head, req) {
 <script src="../includes/deck.js/extensions/codemirror/deck.codemirror.js"></script>
 
 <!-- Specific to this page -->
+<script type="text/javascript">
+    var exports = {};
+</script>
 <script src="dataservice.js"></script>
 <script src="alignment.js"></script>
 <script src="mock_couchdb.js"></script>
