fix duplicate ID

--- a/data-services/index.html
+++ b/data-services/index.html
@@ -282,7 +282,7 @@
         </div>
     </section>
 
-    <section class="slide" id="map-functions-described">
+    <section class="slide" id="map-functions-tryit">
         <h2>How Map Functions Work: Try It</h2>
         <div class="body">
             <p>A map function takes takes one argument, the Resource Data Document. The function should perform the following tasks against the document:</p>
