add browser warning

--- a/data-services/index.html
+++ b/data-services/index.html
@@ -81,6 +81,11 @@
 <article class="deck-container">
     <section class="slide" id="title-slide">
         <h1>Getting Started<br/>with<br/>LR Data Services</h1>
+        <div class="not_mozilla">
+            <img src="about-logo.png" alt="Firefox Recommended">
+            <div class="right">We notice you're not using Firefox. Some of the "Try It" features are only supported Firefox as they require a feature, E4X, that is present only in Mozilla's Javascript engine, which CouchDB uses. Please use Firefox if you wish to use "Try It" to it's fullest.</div>
+            <div class="clear" />
+        </div>
     </section>
 
     <section class="slide" id="what-was-data-services">
