fix for Mozilla persona update

--- a/couchdb/apps/kanso/oauth-key-management/index.html
+++ b/couchdb/apps/kanso/oauth-key-management/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="/_browserid/include.js" type="text/javascript"></script>
+    <script src="https://browserid.org/include.js" type="text/javascript"></script>
 
     <!-- Optional styles -->
     <link rel="stylesheet" type="text/css" href="/_browserid/style.css">
