Adding a title to OAuth management page so one can find it amongst their open tabs

--- a/couchdb/apps/kanso/oauth-key-management/index.html
+++ b/couchdb/apps/kanso/oauth-key-management/index.html
@@ -3,6 +3,8 @@
   <head>
     <script src="https://browserid.org/include.js" type="text/javascript"></script>
 
+    <title>LearningRegistry :: OAuth Management</title>
+
     <!-- Optional styles -->
     <link rel="stylesheet" type="text/css" href="/_browserid/style.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -64,7 +66,7 @@
 
         <button id="regenerate">Revoke and Regenerate</button>
       </fieldset>
-      
+
     </div>
   </body>
 
