update links on node homepage, include EasyPublish

--- a/LR/lr/public/index.html
+++ b/LR/lr/public/index.html
@@ -75,24 +75,21 @@
                    email the <a href="mailto:learningreg-dev@googlegroups.com">LR developer's email list</a>.
                    We have provided some useful links below:</p>
 		<p>
-
                 <ul>
                     <li>
-
                         <a href="http://www.learningregistry.org/">LearningRegistry.org Home Page</a>
+                    </li>
+                    <li>
+                        <a href="/apps/EasyPublish/">Easy Publish</a>
                     </li>
                     <li>
                         <a href="http://www.github.com/LearningRegistry/LearningRegistry/wiki">LR Wiki</a> 
                     </li>
                     <li>
-                        <a href="https://docs.google.com/document/d/191BTary350To_4JokBUFZLFRMOEfGYrl_EHE6QZxUr8/edit?hl=en">LR Technical Specification Document</a>
-
+                        <a href="http://docs.learningregistry.org/">LR Technical Documentation</a>
                     </li>
                     <li>
                         <a href="https://github.com/LearningRegistry">LR Github Code Repository</a>
-                    </li>
-                    <li>
-                        <a href="https://www.pivotaltracker.com/projects/244279">LR Pivotal Tracker Project Management Tool</a>
                     </li>
                 </ul>
 
