Add button to authenticate against Windows Live

--- a/couchdb/apps/kanso/oauth-key-management/index.html
+++ b/couchdb/apps/kanso/oauth-key-management/index.html
@@ -23,6 +23,11 @@
              src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_195x46.png"
              width="195" height="46"/>
       </a>
+      <a href="#" data-provider="microsoft">
+        <img border="0" alt="Sign in with Microsoft"
+             src="https://placeholdit.imgix.net/~text?txtsize=21&bg=0078d7&txtclr=ffffff&txt=Sign+in+with+Microsoft&w=195&h=46&txttrack=0"
+             width="195" height="46"/>
+        </a>
     </div>
     <div class="msg"></div>
     <div class="oauth">
